--- a/assets/css/partials/_typography.scss
+++ b/assets/css/partials/_typography.scss
@@ -28,9 +28,9 @@ h3 {
   color: var(--wp--preset--color--dark-green);
 }
 
-p {
-  margin-block-start: 0;
-}
+// p {
+//   margin-block-start: 0;
+// }
 
 .display-block {
   display: block;
