--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -822,11 +822,6 @@ h3 {
   color: var(--wp--preset--color--dark-green);
 }
 
-p {
-  -webkit-margin-before: 0;
-          margin-block-start: 0;
-}
-
 .display-block {
   display: block;
 }
